[FIX]Overflow issue

--- a/general.css
+++ b/general.css
@@ -20,6 +20,7 @@ html {
   font-size: 62.5%;
   font-family: "Barlow";
   color: #ffffff;
+  overflow: hidden;
 }
 body {
   background-size: cover;
@@ -35,7 +36,7 @@ body {
 .mask {
   background-color: rgba(11, 13, 23, 0.5);
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -135,9 +136,12 @@ body {
   top: 0;
   right: 0;
 
+  height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+
   backdrop-filter: blur(30px);
   transform: translateX(100%);
   transition: 0.3s ease;
@@ -157,11 +161,13 @@ body {
 .nav-list {
   flex: 1 0;
   width: 100%;
+  padding-top: 3.2rem;
+  padding-right: 6.4rem;
   list-style: none;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 .nav-link {
   color: #fff;
